# Agentic-AI

./: .gitignore  promt.py  pyproject.toml  requirements.txt
chatmodel/: cahtapp.py  chat.py  embeddingmodel.py  huggingface.py  localmodel.py
