[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[huggingface]>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "python-dotenv>=1.2.2",
    "transformers>=5.9.0",
    "torch>=2.12.0",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
]
