[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[huggingface]>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "python-dotenv>=1.2.2",
    "transformers>=5.9.0",
    "torch>=2.12.0",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic>=2.13.4",
    "litellm>=1.86.0",
    "openai>=2.38.0",
    "chromadb>=1.5.9",
    "pypdf>=6.12.1",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "websockets>=16.0",
    "langsmith>=0.8.5",
    "streamlit>=1.57.0",
]
